# RoverFlake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WheelInner.SLDPRT  WheelOuter.SLDPRT  colemak.sh  hello  kill_gazebo.sh  localhoster.sh  nubs_ROS_ONE_SERVER_setup.sh  soft_reset_ros_network.sh  zerotier_roscore_setup.sh
cad_exports/arm_urdf1/: CMakeLists.txt  package.xml
cad_exports/mini rover 1/: package.xml
cad_exports/mini_rover_urdf_updated/: CMakeLists.txt  package.xml
cad_exports/rover_chassis_1/: CMakeLists.txt
libphidget22-1.17.20231004/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.status  configure  libphidget22.pc  library_version  libtool  phidget22.h
libphidget22-1.17.20231004/src/: analogsensor.c  analogsensor.h  bridge.c  bridge.gen.c  bridge.h  bridgepackets.gen.c  bridgepackets.gen.h  constants.c  constants.gen.h  constants.h  constantsinternal.h  datainterval.gen.c  debug.c  debug.h  devices.c  devices.gen.c  devices.gen.h  devices.h  dispatch.c  enumutil.gen.c  enumutil.gen.h  errorstrings.gen.c  gpp.c  gpp.h  lightning.c  lightning.h  macros.h  manager.c  manager.h  mesh.c  mesh.h  object.c  phidget.c  phidget.h  phidget22.c  phidget22int.gen.h  phidget22int.h  phidgetbase.h  spi.c  spi.h  (+13 more)
resources/: setup_ubuntu.md
rover_firmware/mini_rover_firmware/: mini_rover_firmware.ino
rover_firmware/zephyr-projects/arm_firmware_teensy41/: CMakeLists.txt  load_hex.sh  prj.conf
rover_firmware/zephyr-projects/arm_firmware_teensy41/include/: Axis.h  armFirmware.h
rover_firmware/zephyr-projects/arm_firmware_teensy41/src/: Axis.cpp  main.cpp  meee.cnaa
rover_firmware/zephyr-projects/magnetometer_sensor/magnetometer_sensor/: CMakeLists.txt  prj.conf
rover_firmware/zephyr-projects/magnetometer_sensor/magnetometer_sensor/src/: main.c
setup_scripts/: quickstart_for_new_members.sh
src/: fake_gnss_publisher.cpp  rviz_publisher.cpp
src/chassisv003/: CMakeLists.txt  package.xml
src/chassisv003/config/: joint_names_chassisv0.3.yaml
src/chassisv003/launch/: display.launch  display.rviz  gazebo.launch
src/chassisv003/meshes/: left_bogie_link.STL  left_front_wheel_link.STL  left_rear_wheel_link.STL  rear_bogie_link.STL  rear_left_wheel_link.STL  rear_right_wheel_llink.STL  right_bogie_link.STL  right_front_wheel_link.STL  right_rear_wheel_link.STL
src/chassisv003/urdf/: chassisv0.3.csv  chassisv003.urdf
src/rover_gazebo/: CMakeLists.txt  package.xml
src/rover_gazebo/launch/: empty_world.launch  playpen.launch  spawn_rover.launch
src/rover_gazebo/urdf/: minirover4.urdf  snowbots_arm_urdf_simplified_v5_12.urdf
src/rover_gazebo/worlds/: test_arm.sdf
src/rover_launchers/: CMakeLists.txt  package.xml
src/rover_launchers/config/: camview.rviz
src/rover_launchers/launch/: arm_joy_bringup.launch  controller_bringup copy.launch  drive_controller.launch  gui_bringup.launch
(+615 files in other folders)
