<package format="2">
  <name>rover_launchers</name>
  <version>0.0.1</version>
  <description>The launch package</description>

  <maintainer email="your@email.com">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>joy</exec_depend>
  

  <export>
  </export>
</package>
